--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,3 +4,28 @@ $secondary-color: #b7a57a;
 @mixin easeOut {
 	transition: all 0.5s ease-out;
 }
+
+// Media query mixins
+@mixin mediaSm {
+	@media screen and (max-width: 500px) {
+		@content;
+	}
+}
+
+@mixin mediaMd {
+	@media screen and (max-width: 768px) {
+		@content;
+	}
+}
+
+@mixin mediaLg {
+	@media screen and (min-width: 769px) and (max-width: 1170px) {
+		@content;
+	}
+}
+
+@mixin mediaXL {
+	@media screen and (min-width: 1171px) {
+		@content;
+	}
+}
