added work/projects page with responsive design

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -23,7 +23,7 @@ $secondary-color: #b7a57a;
 }
 
 @mixin mediaMd {
-	@media screen and (max-width: 768px) {
+	@media screen and (min-width: 501px) and (max-width: 768px) {
 		@content;
 	}
 }
