--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,10 @@ body {
 	line-height: 1.5;
 }
 
+.hidden {
+	visibility: hidden;
+}
+
 // Headings
 h1,
 h1,
@@ -149,7 +153,7 @@ main {
 		@include easeOut
 
 		&:hover {
-			padding: 0.5rem 1.5rem;
+			padding: 1.25rem 2.0rem;
 			background: $secondary-color;
 			color: setTextColor($secondary-color);
 
