--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,7 +150,7 @@ main {
 		padding: 1.5rem 2.5rem;
 		margin-bottom: 3rem;
 
-		@include easeOut
+		@include easeOut;
 
 		&:hover {
 			padding: 1.25rem 2.0rem;
