--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url(/dist/img/portrait-small.jpg);
+      background: url(img/portrait-small.jpg);
       border-radius: 50%;
       border: solid 3px #b7a57a; }
   .menu .nav-item {
@@ -258,7 +258,7 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url(../dist/img/portrait_small.jpg);
+      background: url(img/portrait_small.jpg);
       width: 150px;
       height: 150px; }
   .about-info {
