--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  height: 100%;
   opacity: 0.98;
   visibility: hidden; }
   .menu.show {
@@ -55,7 +56,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url(img/portrait-small.jpg);
+      background: url(../img/portrait-small.jpg);
       border-radius: 50%;
       border: solid 3px #b7a57a; }
   .menu .nav-item {
@@ -267,8 +268,11 @@ main {
   .projects {
     grid-template-columns: repeat(2, 1fr); } }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 400px) and (max-width: 500px) {
   main#home h1 {
     margin-top: 10vh; }
+  .about-info {
+    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
+    grid-template-columns: 1fr; }
   .projects {
     grid-template-columns: 1fr; } }
