--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -2,14 +2,14 @@
 .menu-btn {
 	position: absolute;
 	z-index: 3;
-	right: 35px;
-	top: 35px;
+	right: 1.5rem;
+	top: 1.5rem;
 	cursor: pointer;
 	@include easeOut;
 
 	.btn-line {
-		width: 28px;
-		height: 3px;
+		width: 1.75rem;
+		height: 0.25rem;
 		margin: 0 0 5px 0;
 		background: setTextColor($primary-color);
 		@include easeOut;
@@ -22,7 +22,7 @@
 		.btn-line {
 			// Line 1 - Rotate
 			&:nth-child(1) {
-				transform: rotate(45deg) translate(5px, 5px);
+				transform: rotate(45deg) translate(0.3rem, 0.3rem);
 			}
 
 			// Line 2 - Hide
@@ -32,7 +32,7 @@
 
 			// Line 3 - Rotate
 			&:nth-child(3) {
-				transform: rotate(-45deg) translate(7px, -6px);
+				transform: rotate(-45deg) translate(8px, -8px);
 			}
 		}
 	}
@@ -43,6 +43,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	height: 100%;
 	opacity: 0.98;
 	visibility: hidden;
 
@@ -78,7 +79,7 @@
 
 	// Branding side
 	&-branding {
-		background: $primary-color;
+		background: lighten($color: $primary-color, $amount: 5);
 		@include easeOut;
 		transform: translate3d(0, 100%, 0);
 
@@ -88,11 +89,11 @@
 		}
 
 		.portrait {
-			width: 250px;
-			height: 250px;
-			background: url(img/portrait-small.jpg);
+			width: 15.625rem;
+			height: 15.625rem;
+			background: url(../img/portrait-small.jpg);
 			border-radius: 50%;
-			border: solid 3px $secondary-color;
+			border: solid 0.25rem $secondary-color;
 		}
 	}
 
