--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -38,7 +38,7 @@
 	.menu-nav {
 		height: 75vh;
 		transform: translate3d(-100%, 0, 0);
-		font-size: 24px;
+		font-size: 1.5rem;
 	}
 
 	.menu-branding {
@@ -47,8 +47,8 @@
 
 		.portrait {
 			background: url(img/portrait_small.jpg);
-			width: 150px;
-			height: 150px;
+			width: 9.375rem;
+			height: 9.375rem;
 		}
 	}
 
@@ -71,6 +71,16 @@
 @include mediaSm {
 	main#home h1 {
 		margin-top: 10vh;
+	}
+
+	.about-info {
+		grid-template-areas:
+			"bioimage"
+			"bio"
+			"job1"
+			"job2"
+			"job3";
+		grid-template-columns: 1fr;
 	}
 
 	.projects {
