--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,7 +80,7 @@ main {
 
 .about-info {
 	display: grid;
-	grid-gap: 30px;
+	grid-gap: 1.875rem;
 	grid-template-areas:
 		"bioimage bio bio"
 		"job1 job2 job3";
@@ -91,7 +91,7 @@ main {
 		margin: auto;
 		height: 100%;
 		border-radius: 50%;
-		border: $secondary-color 3px solid;
+		border: $secondary-color 0.25rem solid;
 	}
 
 	.bio {
@@ -114,7 +114,7 @@ main {
 	.job {
 		background: lighten($color: $primary-color, $amount: 5);
 		padding: 0.5rem;
-		border-bottom: $secondary-color 5px solid;
+		border-bottom: $secondary-color 0.3rem solid;
 	}
 }
 
@@ -126,7 +126,7 @@ main {
 
 	img {
 		width: 100%;
-		border: 3px setTextColor($primary-color) solid;
+		border: 0.25rem setTextColor($primary-color) solid;
 
 		&:hover {
 			opacity: 0.5;
@@ -146,7 +146,7 @@ main {
 
 	div {
 		font-size: 2rem;
-		border: 3px setTextColor($primary-color) solid;
+		border: 0.25rem setTextColor($primary-color) solid;
 		padding: 1.5rem 2.5rem;
 		margin-bottom: 3rem;
 
@@ -194,7 +194,7 @@ main {
 	padding: 1rem;
 	background: darken($color: $primary-color, $amount: 10);
 	color: setTextColor($primary-color);
-	height: 60px;
+	height: 3.75rem;
 }
 
 @import "mobile";
