--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,8 @@ main {
         color: #b7a57a;
         transition: all 0.5s ease-out; }
   main .download-resume {
-    margin-top: 1.5vh; }
+    display: block;
+    margin-top: 2vh; }
   main#home {
     overflow: hidden; }
     main#home h1 {
@@ -278,11 +279,11 @@ main {
   color: #fff;
   height: 3.75rem; }
 
-@media screen and (min-width: 1171px) {
+@media screen and (min-width: 1071px) {
   .projects {
     grid-template-columns: repeat(4, 1fr); } }
 
-@media screen and (min-width: 769px) and (max-width: 1170px) {
+@media screen and (min-width: 769px) and (max-width: 1070px) {
   .projects {
     grid-template-columns: repeat(3, 1fr); } }
 
