--- a/css/main.css
+++ b/css/main.css
@@ -113,12 +113,18 @@ h3 {
   h1.lg-heading,
   h1.lg-heading,
   h3.lg-heading {
+    display: flex;
     font-size: 6rem; }
     h1.lg-heading .download-resume,
     h1.lg-heading .download-resume,
     h3.lg-heading .download-resume {
+      display: inline-block;
       line-height: 0;
       font-size: 1rem; }
+      h1.lg-heading .download-resume:focus,
+      h1.lg-heading .download-resume:focus,
+      h3.lg-heading .download-resume:focus {
+        outline: none; }
       h1.lg-heading .download-resume form,
       h1.lg-heading .download-resume form,
       h3.lg-heading .download-resume form {
@@ -128,7 +134,7 @@ h3 {
         h1.lg-heading .download-resume form .btn-download,
         h3.lg-heading .download-resume form .btn-download {
           display: inline-block;
-          margin: auto 2.5rem auto auto; }
+          margin: none; }
   h1.sm-heading,
   h1.sm-heading,
   h3.sm-heading {
@@ -158,13 +164,18 @@ main {
       main .icons a:hover {
         color: #b7a57a;
         transition: all 0.5s ease-out; }
-  main .download-resume {
-    display: block;
-    margin-top: 2vh; }
   main#home {
     overflow: hidden; }
     main#home h1 {
       margin-top: 20vh; }
+    main#home .download-resume {
+      margin-top: 2vh; }
+      main#home .download-resume button:focus {
+        outline: none; }
+  main#about .download-resume {
+    margin: auto 2rem auto auto; }
+    main#about .download-resume button:focus {
+      outline: none; }
 
 .about-info {
   display: grid;
@@ -241,8 +252,7 @@ main {
 
 #contact #copy-popup {
   display: flex;
-  justify-content: space-evenly;
-  vertical-align: bottom; }
+  justify-content: space-evenly; }
   #contact #copy-popup h3 {
     background: #4bb543;
     color: #fff;
