fixed all responsive and image issues

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444;
+$primary-color: #333;
 $secondary-color: #b7a57a;
 
 @mixin easeOut {
@@ -17,13 +17,13 @@ $secondary-color: #b7a57a;
 
 // Media query mixins
 @mixin mediaSm {
-	@media screen and (min-width: 400px) and (max-width: 500px) {
+	@media screen and (max-width: 500px) {
 		@content;
 	}
 }
 
 @mixin mediaMd {
-	@media screen and (min-width: 501px) and (max-width: 768px) {
+	@media screen and (max-width: 768px) {
 		@content;
 	}
 }
