--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -89,8 +89,8 @@
 		}
 
 		.portrait {
-			width: 15.625rem;
-			height: 15.625rem;
+			width: 250px;
+			height: 250px;
 			background: url(../img/portrait-small.jpg);
 			border-radius: 50%;
 			border: solid 0.25rem $secondary-color;
