--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,10 @@ h3 {
 		display: flex;
 		font-size: 6rem;
 
+		a {
+			display: flex;
+		}
+
 		.download-resume {
 			display: inline-block;
 			line-height: 0;
@@ -286,6 +290,48 @@ main {
 	}
 }
 
+// Work blog styles
+#website-proj {
+	.blog-container {
+		display: flex;
+
+		.blog-photo {
+			max-width: 40rem;
+			display: inline-block;
+			margin: 0 4rem 2rem 0;
+			font-size: 8em;
+			text-align: center;
+			border: 0.25rem setTextColor($primary-color) solid;
+			float: left;
+
+			&.fab {
+				padding: 4rem 6rem;
+				color: #ffa500;
+			}
+
+			&.tim-logo {
+				padding: 2rem 4rem;
+			}
+		}
+
+		.blog-text {
+			display: inline-block;
+			margin: 0 auto 0 0;
+			font-size: 1.5em;
+
+			p {
+				margin-top: 0;
+				margin-bottom: 2rem;
+			}
+
+			// .photo-logo {
+			// 	font-size: 10em;
+			// 	float: inherit;
+			// }
+		}
+	}
+}
+
 // Button Styles
 .btn {
 	display: block;
@@ -320,5 +366,11 @@ main {
 	color: setTextColor($primary-color);
 	height: 3.75rem;
 }
+
+// Sticky Style
+// .sticky {
+// 	position: fixed;
+// 	top: 0;
+// }
 
 @import "mobile";
