--- a/scss/main.scss
+++ b/scss/main.scss
@@ -290,7 +290,7 @@ main {
 	}
 }
 
-// Work blog styles
+// Work blog style
 #website-proj {
 	.blog-container {
 		display: flex;
@@ -307,14 +307,16 @@ main {
 			&.fab {
 				padding: 4rem 6rem;
 				color: #ffa500;
+				border: none;
 			}
 
 			&.tim-logo {
 				padding: 2rem 4rem;
+				border: none;
 			}
 
-			&.4u-logo {
-				padding: 4rem;
+			&.for-u-logo {
+				border: none;
 			}
 		}
 
@@ -322,6 +324,7 @@ main {
 			display: inline-block;
 			margin: 0 auto 0 0;
 			font-size: 1.5em;
+			width: 100%;
 
 			p {
 				margin-top: 0;
