--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,16 +196,24 @@ main {
 // Work/Projects page
 .projects {
 	display: grid;
-	grid-gap: 0.7rem;
+	grid-column-gap: 0.7rem;
+	grid-row-gap: 1.5rem;
 	grid-template-columns: repeat(3, 1fr);
 
 	.item {
-		//display: grid;
-		//grid-template-rows: auto;
 		align-content: center;
 		align-items: center;
 		min-height: 3rem;
 		height: 100%;
+
+		.image {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 79%;
+			padding-bottom: 1%;
+			border: 0.25rem setTextColor($primary-color) solid;
+		}
 
 		.photo-logo {
 			display: inline-block;
@@ -216,17 +224,22 @@ main {
 			margin: auto;
 			font-size: 8em;
 			text-align: center;
-			border: 0.25rem setTextColor($primary-color) solid;
 		}
 
 		.logo-photo {
 			padding: 2rem;
 		}
+
+		.links {
+			width: 100%;
+			height: 20%;
+			padding-top: 1%;
+		}
 	}
 
 	img {
 		width: 100%;
-		border: 0.25rem setTextColor($primary-color) solid;
+		justify-self: auto;
 		margin: auto;
 
 		&:hover {
@@ -347,11 +360,6 @@ main {
 				margin-top: 0;
 				margin-bottom: 2rem;
 			}
-
-			// .photo-logo {
-			// 	font-size: 10em;
-			// 	float: inherit;
-			// }
 		}
 	}
 }
