--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@
     background: #fff;
     transition: all 0.5s ease-out; }
   .menu-btn.close {
-    transform: rotate(180deg); }
+    transform: rotate(180deg);
+    background-color: #262626; }
     .menu-btn.close .btn-line:nth-child(1) {
       transform: rotate(45deg) translate(0.42rem, 0.42rem); }
     .menu-btn.close .btn-line:nth-child(2) {
@@ -184,8 +185,6 @@ main {
     margin: auto 2rem auto auto; }
     main#about .download-resume button:focus {
       outline: none; }
-  main#about p {
-    text-indent: 25px; }
   main button.btn-download {
     cursor: pointer;
     transition: all 0.5s ease-out; }
@@ -234,13 +233,21 @@ main {
 
 .projects {
   display: grid;
-  grid-gap: 0.7rem;
+  grid-column-gap: 0.7rem;
+  grid-row-gap: 1.5rem;
   grid-template-columns: repeat(3, 1fr); }
   .projects .item {
     align-content: center;
     align-items: center;
     min-height: 3rem;
     height: 100%; }
+    .projects .item .image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 79%;
+      padding-bottom: 1%;
+      border: 0.25rem #fff solid; }
     .projects .item .photo-logo {
       display: inline-block;
       padding: 2rem;
@@ -249,13 +256,16 @@ main {
       color: #ffa500;
       margin: auto;
       font-size: 8em;
-      text-align: center;
-      border: 0.25rem #fff solid; }
+      text-align: center; }
     .projects .item .logo-photo {
       padding: 2rem; }
+    .projects .item .links {
+      width: 100%;
+      height: 20%;
+      padding-top: 1%; }
   .projects img {
     width: 100%;
-    border: 0.25rem #fff solid;
+    justify-self: auto;
     margin: auto; }
     .projects img:hover {
       opacity: 0.5;
