--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import "config";
 @import "menu";
+@import "projects";
+@import "buttons";
 
 * {
 	box-sizing: border-box;
@@ -99,7 +101,11 @@ main {
 		overflow: hidden;
 
 		h1 {
-			margin-top: 20vh;
+			margin-top: 25vh;
+		}
+
+		.sm-heading {
+			margin-top: 0.5rem;
 		}
 
 		.download-resume {
@@ -180,9 +186,10 @@ main {
 
 		.job {
 			background: lighten($color: $primary-color, $amount: 5);
-			padding: 0.5rem;
+			padding: 1.5rem;
 			border-bottom: $secondary-color 0.3rem solid;
 			overflow: hidden;
+			margin: 0.5rem;
 	
 			h6 {
 				font-size: 0.9rem;
@@ -193,62 +200,7 @@ main {
 	}
 }
 
-// Work/Projects page
-.projects {
-	display: grid;
-	grid-column-gap: 0.7rem;
-	grid-row-gap: 1.5rem;
-	grid-template-columns: repeat(3, 1fr);
-
-	.item {
-		align-content: center;
-		align-items: center;
-		min-height: 3rem;
-		height: 100%;
-
-		.image {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 79%;
-			padding-bottom: 1%;
-			border: 0.25rem setTextColor($primary-color) solid;
-		}
-
-		.photo-logo {
-			display: inline-block;
-			padding: 2rem;
-			width: 100%;
-			min-height: 2rem;
-			color: #ffa500;
-			margin: auto;
-			font-size: 8em;
-			text-align: center;
-		}
-
-		.logo-photo {
-			padding: 2rem;
-		}
-
-		.links {
-			width: 100%;
-			height: 20%;
-			padding-top: 1%;
-		}
-	}
-
-	img {
-		width: 100%;
-		justify-self: auto;
-		margin: auto;
-
-		&:hover {
-			opacity: 0.5;
-			border-color: $secondary-color;
-			@include easeOut;
-		}
-	}
-}
+// Work/Projects page styles imported from _projects.scss
 
 // Contact page
 #contact {
@@ -368,32 +320,7 @@ main {
 	}
 }
 
-// Button Styles
-.btn {
-	display: block;
-	padding: 0.5rem 1rem;
-	border: 0;
-	margin-bottom: 0.3rem;
-	font-size: 1.2rem;
-	line-height: 100%;
-
-	&:hover {
-		background-color: $secondary-color;
-		color: setTextColor($secondary-color);
-	}
-}
-
-.btn-dark {
-	@extend .btn;
-	background: darken($color: $primary-color, $amount: 50);
-	color: #fff;
-}
-
-.btn-light {
-	@extend .btn;
-	background: lighten($color: $primary-color, $amount: 50);
-	color: #333;
-}
+// Button styles imported from _buttons.scss
 
 #main-footer {
 	text-align: center;
